메모리 누수 때문에 toList -> collect(Collectors.toList()) 로 변경