@@ -508,7 +508,7 @@ public class UserServiceImpl implements UserService {
 
         List<BoardResponseDto.FindProfileDto> findProfileBoardDto = boardListEntity.stream()
                                                                     .map(BoardConverter::toFindProfileDto)
-                                                                    .toList();
+                                                                    .collect(Collectors.toList());
         //한게시글에 여러개의 댓글까지 생각하기
         List<Pin> pinListEntity = pinRepository.findTop30ByUserIdOrderByCreatedAtDesc(user.getId());
 
@@ -520,7 +520,7 @@ public class UserServiceImpl implements UserService {
                                     .map(boardId -> boardRepository.findById(boardId)
                                             .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND)))
                                     .map(BoardConverter::toFindProfileDto)
-                                    .toList();
+                                    .collect(Collectors.toList());
 
         return UserConverter.findProfileRes(user,findProfileBoardDto,findProfilePinDto);
     }
@@ -534,7 +534,7 @@ public class UserServiceImpl implements UserService {
 
         List<BoardResponseDto.FindUserBoardsDto> boardList = boardPageEntity.stream()
                                         .map(BoardConverter::toFindBoardsDto)
-                                        .toList();
+                                        .collect(Collectors.toList());
 
         return new PageImpl<>(boardList, adjustedPageable, boardList.size());
     }
@@ -550,7 +550,7 @@ public class UserServiceImpl implements UserService {
                                     .distinct()
                                     .map(pin -> new PinBoardDto(pin,boardRepository.findAllById(pin.getBoard().getId())))
                                     .map(pinBoardDto -> BoardConverter.toFindCommentsDto(pinBoardDto.getPin(),pinBoardDto.getBoard()))
-                                    .toList();
+                                    .collect(Collectors.toList());
 
         return new PageImpl<>(boardsDto, adjustedPageable, boardsDto.size());
 
@@ -564,27 +564,27 @@ public class UserServiceImpl implements UserService {
         //자기가 쓴 글
         List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId()).stream()
                                         .map(board -> UserConverter.toHistoryRes(board, "내가 쓴 글", board.getCreatedAt()))
-                                        .toList();
+                                        .collect(Collectors.toList());
         //자기가 댓글 단 글
         List<BoardResponseDto.HistoryDto> pinBoardsDto = pinRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId()).stream()
                                         .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
                                                 .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                         .distinct()
                                         .map(pinBoardDto -> UserConverter.toHistoryRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt()))
-                                        .toList();
+                                        .collect(Collectors.toList());
         //자기가 좋아요 누른 글
         List<BoardResponseDto.HistoryDto> likeBoardsDto = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId()).stream()
                                         .map(like -> new LikeBoardDto(like, boardRepository.findById(like.getBoard().getId())
                                                 .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                         .distinct()
                                         .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
-                                        .toList();
+                                        .collect(Collectors.toList());
 
         // 세 개의 리스트를 합치고 시간 순으로 정렬
         List<BoardResponseDto.HistoryDto> mergedList = Stream.concat(Stream.concat(boardsDto.stream(), pinBoardsDto.stream()), likeBoardsDto.stream())
                                         .distinct()
                                         .sorted((b1, b2) -> b2.getCreatedAt().compareTo(b1.getCreatedAt())) // 시간 순으로 정렬
-                                        .toList();
+                                        .collect(Collectors.toList());
 
         // 전체 결과를 페이징하여 반환
         int start = Math.min((int) pageable.getOffset(), mergedList.size());
@@ -603,7 +603,7 @@ public class UserServiceImpl implements UserService {
 
         List<BoardResponseDto.HistoryDto> historyDtoList = boardPage.stream()
                 .map(board -> UserConverter.toHistoryRes(board, "내가 쓴 글", board.getCreatedAt()))
-                .toList();
+                .collect(Collectors.toList());
 
         return new PageImpl<>(historyDtoList, adjustedPageable, boardPage.getTotalElements());
     }
@@ -639,7 +639,7 @@ public class UserServiceImpl implements UserService {
                                             .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                     .distinct()
                                     .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
-                                    .toList();
+                                    .collect(Collectors.toList());
 
         return new PageImpl<>(LikeBoardsDto, adjustedPageable, likePage.getTotalElements());
     }
